--- a/store/src/App.css
+++ b/store/src/App.css
@@ -7,6 +7,10 @@
   --mainYellow: #ffa400;
 }
 
+html {
+  overflow: hidden;
+}
+
 body {
   font-family: "Oswald", sans-serif !important;
   background: var(--mainWhite) !important;
